--- a/index.html
+++ b/index.html
@@ -33,21 +33,21 @@
         <h2>Mais vídeos de Mindset</h2>
 
         <div class="categoria-videos">
-            <a href="https://www.youtube.com/watch?v=WNbLEBdTJfc">
-                <img src="https://img.youtube.com/vi/WNbLEBdTJfc/maxresdefault.jpg">
+            <a href="https://www.youtube.com/watch?v=DA3K6Xrx4HE&t=78s">
+                <img src="https://img.youtube.com/vi/DA3K6Xrx4HE&t=78s/maxresdefault.jpg">
             </a>
-            <a href="https://www.youtube.com/watch?v=gV691I3iPH8">
-                <img src="https://img.youtube.com/vi/gV691I3iPH8/maxresdefault.jpg">
+            <a href="https://www.youtube.com/watch?v=E1pkNoojLus">
+                <img src="https://img.youtube.com/vi/E1pkNoojLus/maxresdefault.jpg">
             </a>
 
-            <a href="https://www.youtube.com/watch?v=HLCzpwxkT4A">
-                <img src="https://img.youtube.com/vi/HLCzpwxkT4A/maxresdefault.jpg">
+            <a href="https://www.youtube.com/watch?v=gZtmzT9Wgrw">
+                <img src="https://img.youtube.com/vi/gZtmzT9Wgrw/maxresdefault.jpg">
             </a>
-            <a href="https://www.youtube.com/watch?v=BWWeS01vHFo">
-                <img src="https://img.youtube.com/vi/BWWeS01vHFo/maxresdefault.jpg">
+            <a href="https://www.youtube.com/watch?v=yAZxx8t9zig">
+                <img src="https://img.youtube.com/vi/yAZxx8t9zig/maxresdefault.jpg">
             </a>
-            <a href="https://www.youtube.com/watch?v=hO_tjm9i32g">
-                <img src="https://img.youtube.com/vi/hO_tjm9i32g/maxresdefault.jpg">
+            <a href="https://www.youtube.com/watch?v=W8EullqIOQc">
+                <img src="https://img.youtube.com/vi/W8EullqIOQc/maxresdefault.jpg">
             </a>
 
             
