--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
 
 
 <body>
-    <header>Domine a si mesmo ou seja dominado</header>
+    <header>conheça uma nova magia</header>
     <section>
         <div class="chamada-texto">
-            <h1>O que fazemos na vida ecoa na eternidade</h1>
-            <p>Seja incomum entre os incomuns</p>
+            <h1>adrenalina e diverção</h1>
+            <p>entre nesse novo mundo</p>
         </div>
 
         <div>
